# android12_pixel4xl

./: .gitignore  README.md  android.ipr  android.iws
cts/: PREUPLOAD.cfg
cts/apps/CameraITS/: config.yml
cts/apps/CtsVerifier/: Android.mk  AndroidManifest.xml  NOTICE.txt
cts/apps/TtsTestApp/: AndroidManifest.xml
cts/apps/VpnApp/: Android.bp
cts/hostsidetests/accounts/: AndroidTest.xml
cts/hostsidetests/appcompat/: OWNERS
cts/hostsidetests/appsearch/: AndroidTest.xml
cts/hostsidetests/blobstore/: AndroidTest.xml
cts/hostsidetests/calllog/: AndroidTest.xml
cts/hostsidetests/car/: Android.bp  AndroidTest.xml
cts/hostsidetests/hdmicec/: AndroidTest.xml
cts/hostsidetests/install/: Android.bp  AndroidTest.xml
cts/hostsidetests/rollback/: AndroidTest.xml
cts/hostsidetests/security/: AndroidTest.xml
cts/hostsidetests/securitybulletin/: Android.bp
cts/hostsidetests/silentupdate/: AndroidTest.xml
cts/hostsidetests/stagedinstall/: AndroidTest.xml
cts/hostsidetests/statsdatom/: Android.bp
cts/hostsidetests/trustedvoice/: Android.bp  TEST_MAPPING
cts/hostsidetests/usage/: AndroidTest.xml
cts/libs/install/: Android.bp
cts/tools/cts-device-info/: Android.mk
cts/tools/cts-tradefed/: Android.bp
development/tools/idegen/: excluded-paths
device/amlogic/yukawa/: AndroidProducts.mk  device-common.mk  manifest.xml
device/generic/car/: AndroidProducts.mk  gsi_car_base.mk
device/generic/common/: gsi_product.mk  gsi_system_ext.mk
device/generic/opengl-transport/: Android.bp  METADATA
device/google/barbet-kernel/: adc_tm.ko  adsprpc.ko  adsprpc_compat.ko  apr_dlkm.ko  arm-memlat-mon.ko  arm-smmu-debug.ko  arm-smmu.ko  asix.ko  at24.ko  ax88179_178a.ko  bcl_pmic5.ko  bcl_soc.ko  bluetooth_power.ko  bolero_cdc_dlkm.ko  br_netfilter.ko  cam-context.ko  cam-fd-hw-mgr.ko  cam-sensor-io.ko  cam-sync.ko  cam_a5.ko  cam_actuator.ko  cam_bps.ko  cam_cci.ko  cam_cdm.ko  cam_cpas.ko  cam_csiphy.ko  cam_custom_context.ko  cam_custom_csid_dev.ko  cam_custom_dev.ko  cam_custom_hw_mgr.ko  cam_custom_sub_mod_core.ko  cam_custom_sub_mod_dev.ko  cam_custom_sub_mod_soc.ko  cam_debug_util.ko  cam_eeprom.ko  cam_flash.ko  cam_gyro_core.ko  cam_hfi.ko  cam_icp.ko  cam_ife_csid.ko  (+267 more)
device/google/barbet-sepolicy/: OWNERS  barbet-sepolicy.mk
device/google/bonito-kernel/: synaptics_dsx_core.ko  synaptics_dsx_fw_update.ko
device/google/coral-kernel/: adsp_loader_dlkm.ko  cs35l36_dlkm.ko  ftm5.ko  heatmap.ko  lkdtm.ko  machine_dlkm.ko  q6_dlkm.ko  videobuf2-vmalloc.ko  wcd9xxx_dlkm.ko
device/google/crosshatch-kernel/: snd-soc-cs35l36.ko  snd-soc-sdm845.ko  snd-soc-wcd934x.ko  wcd-core.ko  wcd-dsp-glink.ko
device/google/cuttlefish_prebuilts/: TEST_MAPPING
device/google/fuchsia/: Android.bp  fuchsia.mk
device/google/redbull-kernel/: adsp_loader_dlkm.ko  adsprpc.ko  adsprpc_compat.ko  apr_dlkm.ko  arm-memlat-mon.ko  arm-smmu-debug.ko  bcl_pmic5.ko  bcl_soc.ko  bluetooth_power.ko  bolero_cdc_dlkm.ko  cam-sync.ko  cam_a5.ko  cam_bps.ko  cam_cdm.ko  cam_csiphy.ko  cam_custom_csid_dev.ko  cam_custom_hw_mgr.ko  cam_custom_sub_mod_dev.ko  cam_flash.ko  cam_gyro_core.ko  cam_ife_csid17x.ko  cam_jpeg_enc.ko  cam_lrme_hw.ko  cam_lrme_hw_mgr.ko  cam_req_mgr_late.ko  cam_res_mgr.ko  cam_sensor_vsync_pb.ko  cam_utils.ko  cam_vfe.ko  cdsprm.ko  citadel-spi.ko  clk-rpmh.ko  clk-spmi-pmic-div.ko  cmd-db.ko  cnss_nl.ko  cpu_isolate.ko  dcc_v2.ko  devfreq_devbw.ko  devfreq_qcom_fw.ko  dispcc-lito.ko  (+105 more)
device/google/sunfish-kernel/: adsp_loader_dlkm.ko  br_netfilter.ko  drv2624.ko  hdmi_dlkm.ko  heatmap.ko  incrementalfs.ko  (+17 more)
device/google/trout/agl_services_build/: CMakeLists.txt  build.sh  newrepo.sh  repo_manifest.xml
device/google/trout/agl_services_build/cmake/: android.cmake  default_native_vhal.cmake  fmtlib.cmake  googletest.cmake  grpc.cmake  jsoncpp.cmake  protobuf.cmake
device/google/trout/agl_services_build/cmake/utils/: grpc_cpp_generator.cmake
device/google/trout/agl_services_build/toolchain/: agl_toolchain.cmake
device/google/trout/agl_services_build/yocto-layer/meta-google/: README.md
device/google/trout/agl_services_build/yocto-layer/meta-google/classes/: google-image-overlay.bbclass
device/google/trout/agl_services_build/yocto-layer/meta-google/conf/: layer.conf
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/agl-services/: common.inc  google-trout-agl-services-source_0.1.bb  google-trout-agl-services_0.1.bb  google-trout-grpc-utils-native_0.1.bb  sources.inc
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/images/: machine-image.bbappend
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/images/machine-image/sa8155/google-overlay/etc/systemd/system/: vehicle_hal_grpc_server.service
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/images/machine-image/sa8155/google-overlay/etc/systemd/system/multi-user.target.wants/: dumpstate_grpc_server.service
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/images/machine-image/sa81x5/google-overlay/etc/systemd/system/: dumpstate_grpc_server.service
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/images/machine-image/sa81x5/google-overlay/etc/systemd/system/multi-user.target.wants/: vehicle_hal_grpc_server.service
device/google/trout/agl_services_build/yocto-layer/meta-google/recipes-trout/packagegroups/: packagegroup-google-agl.bb
device/google/trout/hal/audiocontrol/aidl/1.0/agl_build/: CMakeLists.txt
device/google/trout/hal/common/agl/watchdog/: CMakeLists.txt  watchdog.cpp  watchdog.h
device/google/trout/hal/common/agl/watchdog/test/: service.cpp  watchdog_test.service
device/google/trout/hal/dumpstate/1.1/agl_build/: CMakeLists.txt
device/google/trout/hal/vehicle/2.0/agl_build/: CMakeLists.txt
device/google/trout/hal/vehicle/2.0/agl_build/prebuilt/include/android/hardware/automotive/vehicle/2.0/: types.h
device/google_car/: AndroidProducts.mk
system/libartpalette/: palette_android.cc
system/libziparchive/: Android.bp
(+10886 files in other folders)
